# warmth-utils

./: README.md  pyproject.toml
data/: model_hexa_0.epc  model_hexa_0.h5  model_hexa_ts_0_new.epc
tests/: compose.yml  conftest.py  test_rddms.py
warmth_utils/: auth.py  config.py  geomint.py  osdu.py  rddms.py  rddms_utils.py  spec.py  utils.py
