[tool.poetry]
name = "warmth-utils"
version = "0.1.0"
description = ""
authors = ["Adam Cheng <52572642+adamchengtkc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyetp = "0.0.39"
azure-storage-blob = "^12.26.0"
xmltodict = "^0.13.0"
msal = "^1.34.0"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.33.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
